---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-05-13
  Changes:
    - Quality now affects the slowing of spoilage
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-05-13
  Info:
    - Changed description
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-05-13
  Info:
    - Initial release