@@ -1,24 +1,24 @@
 [entity-name]
-simple_refrigerator=Refrigerator
+simple_refrigerator=Cryo-chest
 simple_refrigerator_smoke_effect=Refrigerator smoke
 
 [entity-description]
 simple_refrigerator=A buffer chest that slows item spoilage.
 
 [item-name]
-simple_refrigerator=Refrigerator
+simple_refrigerator=Cryo-chest
 
 [item-description]
 simple_refrigerator=
 
 [technology-name]
-simple_refrigerator=Refrigeration
+simple_refrigerator=Cryo-chest
 
 [technology-description]
-simple_refrigerator=A buffer chest that prevents items from spoiling.
+simple_refrigerator=A buffer chest that slows item spoilage.
 
 [mod-setting-name]
-simple_refrigerator-freeze-rate=Refrigerator freezing rate
+simple_refrigerator-freeze-rate=Cryo-chest freezing rate
 
 [mod-setting-description]
-simple_refrigerator-freeze-rate=Sets how many times slower the spoilage of items in refrigerators happen. 1 = normal speed, 100 = 100x slower, default 10.
+simple_refrigerator-freeze-rate=Sets how many times slower the spoilage of items in cryo-chests happen. 1 = normal speed, 100 = 100x slower, default 10.
