@@ -1,8 +1,10 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
-Date: 2025-05-13
+Date: 2025-05-14
   Changes:
-    - Quality now affects the slowing of spoilage
+    - Changed name to cryo-chest
+    - Slowed down refresh to be sure to stay UPS friendly
+    - Made minimum freezing rate 2
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2025-05-13
